@@ -1,6 +1,7 @@
 package com.agh.hydra.api.register.service;
 
 import com.agh.hydra.api.register.model.User;
+import com.agh.hydra.common.model.UserId;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
@@ -12,4 +13,10 @@ public interface IUserService {
      * @param user user data
      */
     void updateUser(@Valid @NotNull User user);
+
+    /**
+     * @param userId user identifier
+     * @return true if user exists in db
+     */
+    boolean userExists(@Valid @NotNull UserId userId);
 }
