@@ -2,6 +2,7 @@ package com.agh.hydra.register.impl;
 
 import com.agh.hydra.api.register.model.User;
 import com.agh.hydra.api.register.service.IUserService;
+import com.agh.hydra.common.model.UserId;
 import com.agh.hydra.register.dao.UserRepository;
 import com.agh.hydra.register.mapper.RegisterMapper;
 import lombok.RequiredArgsConstructor;
@@ -11,6 +12,8 @@ import org.springframework.validation.annotation.Validated;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
+
+import static com.agh.hydra.common.util.ValueObjectUtil.getValue;
 
 @Slf4j
 @Service
@@ -24,5 +27,10 @@ public class UserService implements IUserService {
     public void updateUser(@Valid @NotNull User user) {
         log.info("Update user data : {}", user);
         userRepository.updateUser(RegisterMapper.INSTANCE.mapUser(user));
+    }
+
+    @Override
+    public boolean userExists(@Valid @NotNull UserId userId) {
+        return userRepository.userExists(getValue(userId));
     }
 }
